# media-server

./: Cargo.toml  license.txt  readme.md
.github/workflows/: rust.yaml
src/: library.rs  logger.rs  main.rs  movie.rs  pages.rs  static_files.rs
static/: main.css  site.webmanifest
