[package]
name = "media-server"
version = "0.1.0"
authors = ["Benjamin Herman <benjamin@metanomial.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"

[dependencies.clap]
version = "3.1.18"
features = ["derive"]

[dependencies.maud]
git = "https://github.com/metanomial/maud"
tag = "rocket-0.5-support"
features = ["rocket"]
