[package]
name = "media-server"
version = "0.1.0"
authors = ["Benjamin Herman <benjamin@metanomial.com>"]
edition = "2021"

[dependencies]
log = "0.4"
regex = "1.5.6"
rocket = "0.5.0-rc.2"
serde = "1.0"
simplelog = "0.12"

[dependencies.clap]
version = "3.1.18"
features = ["derive"]

[dependencies.maud]
git = "https://github.com/metanomial/maud"
tag = "rocket-0.5-support"
features = ["rocket"]

[dependencies.quick-xml]
version = "0.22"
features = ["serialize"]
